...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9z4-q9-AMv">
                                <rect key="frame" x="169" y="551" width="77" height="30"/>
                                <state key="normal" title="Use Offline">
                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Food Items" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B8K-ob-3SU">
                                                    <rect key="frame" x="43" y="0.0" width="122" height="44"/>
                                                    <constraints>
...
                                        </connections>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" shouldIndentWhileEditing="NO" reuseIdentifier="Goals" id="wJV-Gh-5Gk">
                                        <rect key="frame" x="0.0" y="88" width="414" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                                        </connections>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" shouldIndentWhileEditing="NO" reuseIdentifier="Meals" id="Ocp-Cu-zaF">
                                        <rect key="frame" x="0.0" y="132" width="414" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                                        </connections>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" shouldIndentWhileEditing="NO" reuseIdentifier="About" id="11B-lb-lrx">
                                        <rect key="frame" x="0.0" y="176" width="414" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter amount here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pnm-Qt-7gS">
                                <rect key="frame" x="146" y="300" width="248" height="30"/>
                                <color key="tintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Add" id="bLJ-k1-Khj">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="d0R-vN-xDD">
                            <color key="tintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
...
